@@ -33620,19 +33620,6 @@
     </location>
   </country>
   <country>
-    <_name>Christmas Island</_name>
-    <location>
-      <_name>Christmas Island</_name>
-      <code>YPXM</code>
-      <coordinates>10-26S 105-41E</coordinates>
-    </location>
-    <location>
-      <_name>Cocos Island</_name>
-      <code>YPCC</code>
-      <coordinates>12-11S 096-49E</coordinates>
-    </location>
-  </country>
-  <country>
     <_name>Bangladesh</_name>
     <location>
       <_name>Chittagong Patenga</_name>
