@@ -141,6 +141,16 @@
 	</locale>
 </schema>
 <schema>
+	<key>/schemas/apps/gweather/prefs/coordinates</key>
+	<owner>gweather-applet-2</owner>
+	<type>string</type>
+	<locale name="C">
+		<default>DEFAULT_COORDINATES</default>
+		<short>location coordinates</short>
+		<long>latitude and longitude of your location expressed in DD-MM-SS[NS] DD-MM-SS[EW]</long>
+	</locale>
+</schema>
+<schema>
 	<key>/schemas/apps/gweather/prefs/use_custom_radar_url</key>
 	<owner>gweather-applet-2</owner>
 	<type>bool</type>
