@@ -1,3 +1,10 @@
+2004-12-21  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: Remove duplicate YPXM and YPXX
+	* gweather.schemas.in: Add schema for coordinates field
+	* gweather-dialog.c: Hide weather.com button if we're not using maps
+	  from weather.com
+
 2004-12-20  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* gweather-pref.c: (gweather_pref_create):  Use HIG compliant
